adding og:image meta

--- a/themes/erblog/layouts/partials/head.html
+++ b/themes/erblog/layouts/partials/head.html
@@ -69,4 +69,5 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous">
     <script async src="https://cdn.jsdelivr.net/npm/lazysizes@5.2.0/lazysizes.min.js" integrity="sha256-h2tMEmhemR2IN4wbbdNjj9LaDIjzwk2hralQwfJmBOE=" crossorigin="anonymous"></script>
     {{- partial "self-define-head.html" -}}
+    {{ template "_internal/opengraph.html" . }}
 </head>
